; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_expand_string.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_expand_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { %struct.command_ctx* }
%struct.command_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mp_property_expand_string(%struct.MPContext* %0, i8* %1) #0 {
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.command_ctx*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %7 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %6, i32 0, i32 0
  %8 = load %struct.command_ctx*, %struct.command_ctx** %7, align 8
  store %struct.command_ctx* %8, %struct.command_ctx** %5, align 8
  %9 = load %struct.command_ctx*, %struct.command_ctx** %5, align 8
  %10 = getelementptr inbounds %struct.command_ctx, %struct.command_ctx* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %14 = call i8* @m_properties_expand_string(i32 %11, i8* %12, %struct.MPContext* %13)
  ret i8* %14
}

declare dso_local i8* @m_properties_expand_string(i32, i8*, %struct.MPContext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
